# RAMMP

./: .gitignore  CMakeLists.txt  README.md  drink_action_server.md  package.xml  pyproject.toml  test_run.md
action/: DrinkAction.action
config/: real.rviz
docs/: benchmarking-perception.md
docs/superpowers/plans/: 2026-05-21-cup-detection-performance.md  2026-05-21-mediapipe-head-perception.md
launch/: minimal.launch.py  real.launch.py  robot.launch  robot.launch.py  rosbag.launch  sensors.launch  sim.launch
src/rammp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rammp/actions/: base.py  bring_cup_to_mouth.py  grab_cup_from_table.py  home_cup.py  pick_tool.py  pickup_and_order.py  put_cup_back_to_holder.py  stow_tool.py  transfer_tool.py
src/rammp/actions/behavior_trees/: transfer_drink.yaml
src/rammp/actions/feel_the_bite/: base.py  outside_mouth_transfer.py
src/rammp/control/: system_control_client.py
src/rammp/control/robot_controller/: arm_client.py  arm_interface.py  arm_server.py  command_interface.py  joint_states_publisher.py  kinova.py  maintain_home_orientation.py
src/rammp/control/robot_controller/preset_actions/: acquisition.py  close_gripper.py  home.py  open_gripper.py  retract.py  transfer.py
src/rammp/control/robot_controller/safety_log/: arm_commands_log.txt
src/rammp/integration/: demo_run.py  drink_action_client.py  drink_action_server.py  launch_robot.sh  run.py  run_bulldog.sh  test_actions.py  upright_ee.py
src/rammp/integration/log/: default_study_drink_pickup_pos.pkl  execution_log.txt  head_perception_data_0.pkl  head_perception_data_1.pkl  study_drink_pickup_pos.pkl
src/rammp/integration/log/rammp/default/: drink_pickup_pos.pkl  webapp_received_messages.txt  webapp_sent_messages.txt
src/rammp/integration/log/rammp/default/behavior_trees/: transfer_drink.yaml
src/rammp/integration/log/rammp/default/head_perception_log/: head_perception_data_0.pkl  head_perception_data_1.pkl  head_perception_data_10.pkl  head_perception_data_11.pkl  head_perception_data_12.pkl  head_perception_data_13.pkl  head_perception_data_14.pkl  head_perception_data_15.pkl  head_perception_data_16.pkl  head_perception_data_17.pkl  head_perception_data_18.pkl  head_perception_data_19.pkl  head_perception_data_2.pkl  head_perception_data_20.pkl  head_perception_data_21.pkl  head_perception_data_3.pkl  head_perception_data_4.pkl  head_perception_data_5.pkl  head_perception_data_6.pkl  head_perception_data_7.pkl  head_perception_data_8.pkl  head_perception_data_9.pkl
src/rammp/integration/saved_states/: another_after_drink_pickup.p  last_state.p
src/rammp/interfaces/: perception_interface.py  realsense_interface.py  rviz_interface.py  web_interface.py
src/rammp/misc/: mock_web_interface.py  speak.py  transfer_button_listener.py  visualize_log.py
src/rammp/perception/drink_perception/: drink_perception.py
src/rammp/perception/gestures_perception/: static_gesture_detectors.py
src/rammp/perception/head_perception/: deca_perception.py  head_geometry.py  mediapipe_perception.py  ros_wrapper.py
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/0_top/: 0_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/10_top/: 10_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/1_top/: 1_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/2_top/: 2_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/3_top/: 3_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/4_top/: 4_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/5_top/: 5_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/6_top/: 6_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/7_top/: 7_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/8_top/: 8_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/9_top/: 9_top.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/IMG_0392_inputs/: IMG_0392_inputs.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/alfw2/: alfw2.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/id04657-PPHljWCZ53c-000565_inputs_inputs/: id04657-PPHljWCZ53c-000565_inputs_inputs.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/id06692-Hlahj5abifM-002721_inputs_inputs/: id06692-Hlahj5abifM-002721_inputs_inputs.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/id08392-DGGTJx470Ag-005451_inputs_inputs/: id08392-DGGTJx470Ag-005451_inputs_inputs.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/id08456-SEvpX9LhEP4-000957_inputs_inputs/: id08456-SEvpX9LhEP4-000957_inputs_inputs.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/image02673/: image02673.mtl
src/rammp/perception/head_perception/DECA/TestSamples/examples_FEMTO/results/image03786/: image03786.mtl
src/rammp/safety/: bulldog.py  collision_sensor.py  estops_publisher.py  transfer_button_listener.py  utils.py  watchdog.py
src/rammp/simulation/: scene_description.py
src/rammp/simulation/configs/: wheelchair.yaml
src/rammp/utils/: tf_utils.py
srv/: PerceiveCup.srv
tests/: conftest.py  test_ros2_migration.py
tests/perception/drink_perception/: test_drink_geometry.py
tests/perception/gestures_perception/: test_mouth_open.py
tests/perception/head_perception/: test_head_geometry.py  test_landmark_indices.py
