<?xml version="1.0"?>
<package format="3">
  <name>drink_actions_test</name>
  <version>0.0.1</version>
  <description>ROS2 Humble package for drink-related action servers and clients.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cornell_feeding_interfaces</depend>
  <exec_depend>std_srvs</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>