[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rammp"
version = "0.1.0"
description = "Code for RAMMP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "multiprocess",
    "pyyaml",
    "rospkg",
    "catkin_pkg",
    "empy",
    "paramiko",
    "PyAudio",
]

[project.optional-dependencies]
full = [
    "pybullet_helpers@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git#subdirectory=pybullet-helpers",
    "pyaudio",
    "imageio[ffmpeg]",
    "relational_structs@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git#subdirectory=relational-structs",
    "prpl-utils@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git#subdirectory=prpl-utils",
    "tomsutils@git+https://github.com/tomsilver/toms-utils.git",
    "opencv-python",
    "scikit-learn",
    "scikit-image",
    "yacs",
    "kornia",
    "open3d",
    "face-alignment",
    "numpy",
    "defusedxml",
    "twisted",
    "pyOpenSSL",
    "autobahn",
    "tornado",
    "bson",
    "gTTS",
    "playsound",
    "black",
]

controller = [
    "protobuf==3.19.0",
]

dev = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

all = ["rammp[full,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pybullet_helpers = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = [
    "venv/*",
]

[[tool.mypy.overrides]]
module = [
    "pybullet.*",
    "pyaudio.*",
    "scipy.*",
]
ignore_missing_imports = true
